@@ -13,7 +13,8 @@ Version TBD
 
   * Add support for avr910 type programmers (mcu00100, pavr avr910, etc).
 
-
+  * Support new devices: ATmega8535
+  
 
 Version 4.0.0
 
